--- a/executives.html
+++ b/executives.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat May 02 2020 19:17:23 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu May 07 2020 00:23:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5e7674ce1a5b6b0e47a46d81" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -26,7 +26,7 @@
 </head>
 <body class="body">
   <div class="hero">
-    <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" class="nav w-nav">
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="nav w-nav">
       <div class="nav-inner">
         <div class="nav-logo-wrap"><a href="index.html" class="brand w-nav-brand"><img src="images/rsz_bcyc_logo.jpg" width="100" srcset="images/rsz_bcyc_logo-p-500.jpeg 500w, images/rsz_bcyc_logo.jpg 608w" sizes="100px" alt="BCYC logo" class="image-6"></a></div>
         <div class="nav-menu-wrap">
@@ -36,7 +36,7 @@
                 <div class="icon w-icon-dropdown-toggle"></div>
                 <div class="text-block">Regional Chapters</div>
               </div>
-              <nav class="dropdown-list w-dropdown-list"><a href="regions/islands.html" class="dropdown-link w-dropdown-link">Islands</a><a href="regions/lower-mainland.html" class="dropdown-link w-dropdown-link">Lower Mainland</a></nav>
+              <nav class="dropdown-list w-dropdown-list"><a href="regions/islands.html" class="dropdown-link w-dropdown-link">Islands</a><a href="regions/lower-mainland.html" class="dropdown-link w-dropdown-link">Lower Mainland</a><a href="regions/southern-interior.html" class="dropdown-link w-dropdown-link">Southern Interior</a></nav>
             </div>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
               <div class="w-dropdown-toggle">
@@ -59,33 +59,32 @@
   </div>
   <div class="people-section">
     <div class="w-layout-grid grid">
-      <div id="w-node-c0b377545e38-47a46d81" data-w-id="5fa6ac9b-4373-980f-10d5-c0b377545e38" style="opacity:0" class="person-block"><img src="images/ezgif.com-webp-to-jpg.jpg" alt="photo of Fallon O&#x27;Neill" class="image-5">
+      <div id="w-node-5696a71da7ab-47a46d81" data-w-id="151a7b28-a87e-57d5-62cc-5696a71da7ab" style="opacity:0" class="person-block"><img src="images/pasted-image-0-1.png" width="195" alt="photo of Diego Christiansen-Barker" srcset="images/pasted-image-0-1-p-500.png 500w, images/pasted-image-0-1-p-800.png 800w, images/pasted-image-0-1-p-1080.png 1080w, images/pasted-image-0-1.png 1432w" sizes="195px" class="image-5">
+        <div class="person-name">Diego Christiansen-Barker</div>
+        <div class="person-position">Chair</div>
+        <div class="person-blurb">Diego leads through his role as Chair of BCYC. Spending most of his time doing activism work or paid work, he doesn’t have much free time but when he does he enjoys a good strategy game or a long run.<br></div>
+      </div>
+      <div id="w-node-c0b377545e38-47a46d81" data-w-id="5fa6ac9b-4373-980f-10d5-c0b377545e38" style="opacity:0" class="person-block"><img src="images/ezgif.com-webp-to-jpg.jpg" alt="photo of Fallon O&#x27;Neill" width="195" class="image-5">
         <div class="person-name">Fallon O&#x27;Neill</div>
-        <div class="person-position">Chair of BCYC</div>
+        <div class="person-position">Founder</div>
         <div class="person-blurb">Fallon founded the BC Youth Council with her best friend when she was 14 years old. Currently, Fallon is a 17 year old student attending Rockridge Secondary School, West Vancouver, who enjoys theatre, journalism, and eating sushi with her friends.</div>
       </div>
-      <div id="w-node-5696a71da7ab-47a46d81" data-w-id="151a7b28-a87e-57d5-62cc-5696a71da7ab" style="opacity:0" class="person-block"><img src="images/pasted-image-0-1.png" width="195" alt="photo of Diego Christiansen-Barker" srcset="images/pasted-image-0-1-p-500.png 500w, images/pasted-image-0-1-p-800.png 800w, images/pasted-image-0-1-p-1080.png 1080w, images/pasted-image-0-1.png 1432w" sizes="(max-width: 479px) 100vw, 195px" class="image-5">
-        <div class="person-name">Diego Christiansen-Barker</div>
-        <div class="person-position">Director of Operations</div>
-        <div class="person-blurb">Diego leads through a variety of roles, which include; Director of Operations, Chair of the Island Chapter, Head of the Vote16BC partnership, and Head of the promotional committee. Spending most of his time doing activism work or paid work he doesn’t have much free time but when he does he enjoys a good strategy game or a long run.<br></div>
+      <div id="w-node-7822547a73a9-47a46d81" data-w-id="1f0f450f-c37f-ff9c-4e20-7822547a73a9" style="opacity:0" class="person-block"><img src="images/IMG_0683.JPG" width="195" alt="Photo of Aiden Mitchell" srcset="images/IMG_0683-p-500.jpeg 500w, images/IMG_0683-p-800.jpeg 800w, images/IMG_0683-p-1080.jpeg 1080w, images/IMG_0683.JPG 3024w" sizes="195px" class="image-5">
+        <div class="person-name">Aiden Mitchell</div>
+        <div class="person-position">Director of Information Technology</div>
+        <div class="person-blurb">Aiden is from Campbell River and he runs his own business doing tech support &amp; web design. He designed this website.</div>
       </div>
-      <div id="w-node-025736557e54-47a46d81" data-w-id="9ddc4710-2034-f085-be88-025736557e54" style="opacity:0" class="person-block"><img src="images/IMG-1601.jpg" alt="Photo of Aly Lalani" class="image-5">
-        <div class="person-name">Aly Lalani</div>
+      <div id="w-node-025736557e54-47a46d81" data-w-id="9ddc4710-2034-f085-be88-025736557e54" style="opacity:0" class="person-block"><img src="images/21944145-684A-47D8-9668-56BD35285D17-54009-00001CCE3B51E745-min.jpg" alt="Photo of Matthew Tran" width="195" srcset="images/21944145-684A-47D8-9668-56BD35285D17-54009-00001CCE3B51E745-min-p-500.jpeg 500w, images/21944145-684A-47D8-9668-56BD35285D17-54009-00001CCE3B51E745-min-p-800.jpeg 800w, images/21944145-684A-47D8-9668-56BD35285D17-54009-00001CCE3B51E745-min-p-1080.jpeg 1080w, images/21944145-684A-47D8-9668-56BD35285D17-54009-00001CCE3B51E745-min.jpg 1241w" sizes="195px" class="image-5">
+        <div class="person-name">Matthew Tran</div>
         <div class="person-position">Director of Campaigns </div>
       </div>
-      <div id="w-node-c5fa2bf0a1fc-47a46d81" data-w-id="349e0798-0bf3-99b9-ce6c-c5fa2bf0a1fc" style="opacity:0" class="person-block"><img src="images/IMG-1599.jpg" width="200" alt="Photo of Jenny Tindall" class="image-5">
-        <div class="person-name">Jenny Tindall</div>
-        <div class="person-position">Director of Secretariat</div>
+      <div id="w-node-c5fa2bf0a1fc-47a46d81" data-w-id="349e0798-0bf3-99b9-ce6c-c5fa2bf0a1fc" style="opacity:0" class="person-block"><img src="images/IMG_0803.JPG" width="195" alt="Photo of Eva Hueng" srcset="images/IMG_0803-p-500.jpeg 500w, images/IMG_0803-p-800.jpeg 800w, images/IMG_0803-p-1080.jpeg 1080w, images/IMG_0803-p-1600.jpeg 1600w, images/IMG_0803.JPG 1932w" sizes="195px" class="image-5">
+        <div class="person-name">Eva Yueng</div>
+        <div class="person-position">Director of Human Resources</div>
       </div>
-      <div id="w-node-a68b0e050697-47a46d81" data-w-id="3409a9ab-a6f0-0459-e2f8-a68b0e050697" style="opacity:0" class="person-block"><img src="images/rsz_img_0014.jpg" width="183" alt="Photo of Ana Grace Rans Kolakovic" class="image-5">
-        <div class="person-name">Ana Grace Rans Kolakovic</div>
-        <div class="person-position">Director of Human Resources, Head of Student Reps campaign</div>
-        <div class="person-blurb">Ana Grace Rans Kolakovic is currently completing the International Baccalaureate program. She became involved with the BCYC after participating in the Summit program with Dogwood. She is currently working on the Student Reps BC campaign with many other passionate youth. You can always find Ana Grace reading a good book and listening to GD.</div>
-      </div>
-      <div id="w-node-bf9155f9f14f-47a46d81" data-w-id="3fff79bb-d420-d66a-d3a1-bf9155f9f14f" style="opacity:0" class="person-block hiddenblock"><img src="images/rsz_bcyc_logo.jpg" srcset="images/rsz_bcyc_logo-p-500.jpeg 500w, images/rsz_bcyc_logo.jpg 608w" sizes="100vw" alt="BCYC logo" class="image-5">
-        <div class="person-name">Empty</div>
-        <div class="person-position">Director of Recruiting</div>
-        <div class="person-blurb">Hello, my name is Aiden Mitchell, I like cats. This is a place for a blurb about the person</div>
+      <div id="w-node-bf9155f9f14f-47a46d81" data-w-id="3fff79bb-d420-d66a-d3a1-bf9155f9f14f" style="opacity:0" class="person-block hiddenblock"><img src="images/image1.jpeg" width="195" alt="" class="image-5">
+        <div class="person-name">Ishan Bhandal</div>
+        <div class="person-position">Director of Operations</div>
       </div>
     </div>
   </div>
