--- a/401.html
+++ b/401.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat May 02 2020 19:17:23 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5e7a4efafe669f33c7505a6a" data-wf-site="5e30eecf2c9656b33936eb65">
+<!--  Last Published: Sat Jun 13 2020 19:51:30 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="5ed82f329f6d91450cbc67b3" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
   <title>Protected page</title>
@@ -17,7 +17,7 @@
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.jpg" rel="apple-touch-icon">
+  <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
   <div class="utility-page-wrap">
