--- a/campaigns/student-reps.html
+++ b/campaigns/student-reps.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Jun 12 2020 19:47:36 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Jun 13 2020 19:51:30 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ed82f329f6d915073bc67b5" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -17,7 +17,7 @@
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="../images/webclip.jpg" rel="apple-touch-icon">
+  <link href="../images/webclip.png" rel="apple-touch-icon">
   <!--  Facebook Pixel Code  -->
   <script>
 !function(f,b,e,v,n,t,s)
